<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/piepr_vesture_tv_kolonna_pieprasijums_id"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/roboto"
        android:text="@string/teksts_kolonna_pieprasijuma_id"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/piepr_vesture_tv_kolonna_datums"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/roboto"
        android:text="@string/teksts_kolonna_datums"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/piepr_vesture_tv_kolonna_pieprasijums"
        app:layout_constraintStart_toEndOf="@+id/piepr_vesture_tv_kolonna_pieprasijums_id"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/piepr_vesture_tv_kolonna_pieprasijums"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/roboto"
        android:text="@string/teksts_kolonna_pieprasijums"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/piepr_vesture_tv_kolonna_prognoze"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/piepr_vesture_tv_kolonna_prognoze"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/roboto"
        android:text="@string/teksts_kolonna_prognoze"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/piepr_vesture_tv_kolonna_darbadiena"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/piepr_vesture_tv_kolonna_darbadiena"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/roboto"
        android:text="@string/teksts_kolonna_darbadiena"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/piepr_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/piepr_vesture_tv_kolonna_pieprasijums" />

</android.support.constraint.ConstraintLayout>