<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp"
    android:animateLayoutChanges="true">

    <ImageButton
        android:id="@+id/jauna_bulc_ibtn_attels"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/jauna_bulc_et_nos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_izvelieties_attelu" />

    <EditText
        android:id="@+id/jauna_bulc_et_nos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/teksts_nosaukums"
        android:inputType="textPersonName"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/jauna_bulc_et_pasizmaksa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/jauna_bulc_et_pasizmaksa"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/jauna_bulc_et_realizacija"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/jauna_bulc_et_realizacija"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/jauna_bulc_et_nerealizetais"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/jauna_bulc_et_nerealizetais"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/jauna_bulc_btn_save"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/jauna_bulc_tv_pasizmaksa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/teksts_cepsanas_izmaksas"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/jauna_bulc_tv_realizacija"
        app:layout_constraintEnd_toStartOf="@+id/jauna_bulc_et_pasizmaksa"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/jauna_bulc_tv_realizacija"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/teksts_cena"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/jauna_bulc_tv_nerealizetais"
        app:layout_constraintEnd_toStartOf="@+id/jauna_bulc_et_realizacija"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/jauna_bulc_tv_nerealizetais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/teksts_parpalikuma_cena"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/jauna_bulc_btn_save"
        app:layout_constraintEnd_toStartOf="@+id/jauna_bulc_et_nerealizetais"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/jauna_bulc_btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/RTUColorPrimary"
        android:fontFamily="@font/roboto"
        android:text="@string/teksts_poga_saglabat"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>