<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteY="81dp"
    android:animateLayoutChanges="true">

    <ImageView
        android:id="@+id/bulc_parskats_row_image"
        android:layout_width="90dp"
        android:layout_height="68dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_nav_attela" />

    <TextView
        android:id="@+id/bulc_parskats_row_tv_bulc_nos"
        android:layout_width="228dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto"
        android:text="TextView"
        android:textColor="@color/RTUColorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/bulc_parskats_row_image"
        tools:layout_editor_absoluteY="11dp" />

    <TextView
        android:id="@+id/bulc_parskats_row_tv_pelna"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/roboto"
        android:text="TextView"
        android:textColor="@color/RTUColorPrimary"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/editText2"
        app:layout_constraintTop_toTopOf="@+id/editText2" />

    <TextView
        android:id="@+id/bulc_parskats_row_tv_pardotais_apjoms"
        android:layout_width="133dp"
        android:layout_height="30dp"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/roboto"
        android:text="TextView"
        android:textColor="@color/RTUColorPrimary"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/editText3"
        app:layout_constraintTop_toTopOf="@+id/editText" />

    <TextView
        android:id="@+id/bulc_parskats_row_tv_prognozes_precizitate"
        android:layout_width="94dp"
        android:layout_height="30dp"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/roboto"
        android:text="TextView"
        android:textColor="@color/RTUColorPrimary"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/editText3"
        app:layout_constraintTop_toTopOf="@+id/editText3" />

    <TextView
        android:id="@+id/editText2"
        android:layout_width="111dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/teksts_ieguta_pelna"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/bulc_parskats_row_image"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <TextView
        android:id="@+id/editText"
        android:layout_width="163dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/teksts_pardotais_apjoms"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/bulc_parskats_row_image"
        app:layout_constraintTop_toBottomOf="@+id/bulc_parskats_row_tv_bulc_nos" />

    <TextView
        android:id="@+id/editText3"
        android:layout_width="179dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/teksts_algoritma_precizitate"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/bulc_parskats_row_image"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />
</android.support.constraint.ConstraintLayout>